<resources>
    <string name="app_name">KADE</string>
    <string name="next_match">Next Match</string>
    <string name="previous_match">Previous</string>
    <string name="team">Team</string>
    <string name="read_more">Description [Read More]</string>
    <string name="see_less">Description [See Less]</string>
    <string name="league_list">League List</string>
    <string name="league_detail">League Detail</string>
    <string name="vs">VS</string>
    <string name="standings">Standings</string>
    <string name="logo">Logo</string>
    <string name="match_info">Match Info</string>
    <string name="red_card">Red Card</string>
    <string name="detail_match">Detail Match</string>
    <string name="team_formation">Team Formation</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="match">Match</string>
    <string name="search">Search</string>
    <string name="no_data_search">No data search</string>
    <string name="not_found">Not Found</string>
    <string name="favorite">Favorite</string>
    <string name="data_is_empty">Data is empty</string>
    <string name="warning">Warning</string>
    <string name="delete_warning">Are you sure to delete this from favorite list?</string>

    <string-array name="idLeague">
        <item>4328</item>
        <item>4334</item>
        <item>4331</item>
        <item>4332</item>
        <item>4335</item>
        <item>4346</item>
        <item>4356</item>
        <item>4344</item>
        <item>4330</item>
        <item>4396</item>
    </string-array>
</resources>
