<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ui.Favorite"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_favorite"
        android:background="@color/colorPrimary"
        app:tabIconTint="@color/tab_selector"
        app:tabSelectedTextColor="@color/tab_selector"
        app:tabTextColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.tabs.TabItem
            android:text="@string/next_match"
            android:icon="@drawable/ic_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:text="@string/previous_match"
            android:icon="@drawable/ic_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <com.google.android.material.tabs.TabItem
            android:text="@string/team"
            android:icon="@drawable/ic_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager_favorite"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>