<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ui.LeagueDetail">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleGravity="top"
            app:layout_scrollFlags="scroll">
            <ScrollView
                android:scrollbars="vertical"
                android:nestedScrollingEnabled="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    app:cardUseCompatPadding="true"
                    android:backgroundTint="@color/colorPrimary"
                    android:fitsSystemWindows="true"
                    app:layout_collapseMode="parallax"
                    app:cardElevation="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:paddingBottom="16dp"
                        android:orientation="vertical"
                        android:layout_margin="8dp"
                        android:background="@color/colorPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <LinearLayout
                            android:orientation="horizontal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                            <ImageView
                                android:id="@+id/img_logo_league_detail"
                                android:layout_width="150dp"
                                android:layout_height="150dp"
                                android:adjustViewBounds="true"
                                android:fitsSystemWindows="true"/>
                            <LinearLayout
                                android:gravity="center|left"
                                android:orientation="vertical"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <TextView
                                    android:layout_marginStart="8dp"
                                    android:id="@+id/txt_name_league_detail"
                                    android:textColor="@color/white"
                                    android:textSize="20sp"
                                    android:textStyle="bold"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>
                                <TextView
                                    android:id="@+id/txt_country_league_detail"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:layout_marginStart="8dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>
                                <TextView
                                    android:id="@+id/txt_SportType_League_detail"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:layout_marginStart="8dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>
                                <TextView
                                    android:id="@+id/txt_website_League_detail"
                                    android:textColor="@color/white"
                                    android:textSize="15sp"
                                    android:layout_marginStart="8dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"/>
                            </LinearLayout>
                        </LinearLayout>

                        <TextView
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="8dp"
                            android:id="@+id/txt_readmore_league_detail"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:text="@string/read_more"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"/>

                        <TextView
                            android:layout_marginStart="8dp"
                            android:maxLines="10"
                            android:layout_marginTop="8dp"
                            android:id="@+id/txt_description_league_detail"
                            android:textColor="@color/white"
                            android:textSize="15sp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </ScrollView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:background="@color/colorPrimary"
            app:tabSelectedTextColor="@color/white"
            app:tabIndicatorColor="@color/colorPrimary"
            app:tabTextColor="@color/colorAccent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabIconTint="@color/tab_selector"
            android:layout_gravity="bottom"
            app:tabGravity="center"
            >
            <com.google.android.material.tabs.TabItem
                android:icon="@drawable/ic_next"
                android:text="@string/next_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:icon="@drawable/ic_previous"
                android:text="@string/previous_match"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:icon="@drawable/ic_standing"
                android:text="@string/standings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.tabs.TabItem
                android:icon="@drawable/ic_team"
                android:text="@string/team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </com.google.android.material.tabs.TabLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager_leagueDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </androidx.viewpager.widget.ViewPager>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>