<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:overScrollMode="always"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.ui.DetailMatch">
    <LinearLayout
        android:id="@+id/linear_detailMatch"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/img_detail_teamA"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    />
                <TextView
                    android:id="@+id/txt_detail_teamAName"
                    android:gravity="center"
                    android:textColor="@color/dark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <TextView
                android:id="@+id/txt_detail_center"
                android:layout_gravity="center"
                android:textSize="40sp"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                android:textColor="@color/dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/img_detail_teamB"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        />
                    <TextView
                        android:id="@+id/txt_detail_teamBName"
                        android:gravity="center"
                        android:textColor="@color/dark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_marginTop="16dp"
            android:padding="8dp"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/txt_detail_timeMatch"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:padding="8dp"
            android:id="@+id/txt_detail_LocationMatch"
            android:textColor="@color/white"
            android:background="@color/red"
            android:textSize="17sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="@string/team_formation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="17sp"
                android:gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/txt_detail_teamAFormation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="17sp"
                android:gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/txt_detail_teamBFormation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="@string/red_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="17sp"
                android:gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/txt_detail_teamARedCard"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="17sp"
                android:gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/txt_detail_teamBRedCard"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <TextView
            android:gravity="center"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:text="@string/yellow_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="17sp"
                android:gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/txt_detail_teamAYellowCard"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="17sp"
                android:gravity="center"
                android:layout_margin="8dp"
                android:id="@+id/txt_detail_teamBYellowCard"
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar_detailMatch"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>